Fix T95984: Use consistent shifting for persp and ortho cam.

Now always properly shifting camera for ortho and perspective.